--- a/gradle.properties
+++ b/gradle.properties
@@ -13,13 +13,13 @@ minecraft_version=1.20.1
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20.1,1.20.2)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=47.2.20
+forge_version=47.4.0
 # The Forge version range can use any version of Forge as bounds or match the loader version range
-forge_version_range=[47.1,)
+forge_version_range=[47.4,)
 # The loader version range can only use the major version of Forge/FML as bounds
 loader_version_range=[47,)
 
-epicfight_version_range=[20.9.7,20.10)
+epicfight_version_range=[20.10,)
 # The mapping channel to use for mappings.
 # The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
 # Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
@@ -50,7 +50,7 @@ mod_name=Epic Fight NBT Integration
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.20.1-1.1.0
+mod_version=1.20.1-1.1.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
